fix: update layout and spacing in SkillCard, adjust project details, and refine location format

--- a/src/components/SkillCard.module.scss
+++ b/src/components/SkillCard.module.scss
@@ -3,18 +3,3 @@ ul.custom {
   margin: 0;
   padding: 0;
 }
-
-ul.custom li {
-  position: relative;
-  padding-left: 1.5rem;
-}
-
-ul.custom li::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0.25rem;
-  width: 1rem;
-  height: 1rem;
-  background: url('/images/bullet-check.svg') no-repeat center / contain;
-}
